--- a/kubernetes/customresourcedefinitions.gen.yaml
+++ b/kubernetes/customresourcedefinitions.gen.yaml
@@ -359,6 +359,10 @@ spec:
                             required:
                             - consistentHash
                           properties:
+                            aggression:
+                              description: The aggression factor for traffic increase
+                                during slow start.
+                              type: string
                             consistentHash:
                               properties:
                                 httpCookie:
@@ -448,6 +452,10 @@ spec:
                                     type: string
                                   type: array
                               type: object
+                            minWeightPercent:
+                              description: The minimum percentage of traffic to send
+                                to new endpoints during slow start.
+                              type: integer
                             simple:
                               enum:
                               - UNSPECIFIED
@@ -655,6 +663,10 @@ spec:
                                   required:
                                   - consistentHash
                                 properties:
+                                  aggression:
+                                    description: The aggression factor for traffic
+                                      increase during slow start.
+                                    type: string
                                   consistentHash:
                                     properties:
                                       httpCookie:
@@ -747,6 +759,10 @@ spec:
                                           type: string
                                         type: array
                                     type: object
+                                  minWeightPercent:
+                                    description: The minimum percentage of traffic
+                                      to send to new endpoints during slow start.
+                                    type: integer
                                   simple:
                                     enum:
                                     - UNSPECIFIED
@@ -1041,6 +1057,10 @@ spec:
                       required:
                       - consistentHash
                     properties:
+                      aggression:
+                        description: The aggression factor for traffic increase during
+                          slow start.
+                        type: string
                       consistentHash:
                         properties:
                           httpCookie:
@@ -1127,6 +1147,10 @@ spec:
                               type: string
                             type: array
                         type: object
+                      minWeightPercent:
+                        description: The minimum percentage of traffic to send to
+                          new endpoints during slow start.
+                        type: integer
                       simple:
                         enum:
                         - UNSPECIFIED
@@ -1331,6 +1355,10 @@ spec:
                             required:
                             - consistentHash
                           properties:
+                            aggression:
+                              description: The aggression factor for traffic increase
+                                during slow start.
+                              type: string
                             consistentHash:
                               properties:
                                 httpCookie:
@@ -1420,6 +1448,10 @@ spec:
                                     type: string
                                   type: array
                               type: object
+                            minWeightPercent:
+                              description: The minimum percentage of traffic to send
+                                to new endpoints during slow start.
+                              type: integer
                             simple:
                               enum:
                               - UNSPECIFIED
@@ -1768,6 +1800,10 @@ spec:
                             required:
                             - consistentHash
                           properties:
+                            aggression:
+                              description: The aggression factor for traffic increase
+                                during slow start.
+                              type: string
                             consistentHash:
                               properties:
                                 httpCookie:
@@ -1857,6 +1893,10 @@ spec:
                                     type: string
                                   type: array
                               type: object
+                            minWeightPercent:
+                              description: The minimum percentage of traffic to send
+                                to new endpoints during slow start.
+                              type: integer
                             simple:
                               enum:
                               - UNSPECIFIED
@@ -2064,6 +2104,10 @@ spec:
                                   required:
                                   - consistentHash
                                 properties:
+                                  aggression:
+                                    description: The aggression factor for traffic
+                                      increase during slow start.
+                                    type: string
                                   consistentHash:
                                     properties:
                                       httpCookie:
@@ -2156,6 +2200,10 @@ spec:
                                           type: string
                                         type: array
                                     type: object
+                                  minWeightPercent:
+                                    description: The minimum percentage of traffic
+                                      to send to new endpoints during slow start.
+                                    type: integer
                                   simple:
                                     enum:
                                     - UNSPECIFIED
@@ -2450,6 +2498,10 @@ spec:
                       required:
                       - consistentHash
                     properties:
+                      aggression:
+                        description: The aggression factor for traffic increase during
+                          slow start.
+                        type: string
                       consistentHash:
                         properties:
                           httpCookie:
@@ -2536,6 +2588,10 @@ spec:
                               type: string
                             type: array
                         type: object
+                      minWeightPercent:
+                        description: The minimum percentage of traffic to send to
+                          new endpoints during slow start.
+                        type: integer
                       simple:
                         enum:
                         - UNSPECIFIED
@@ -2740,6 +2796,10 @@ spec:
                             required:
                             - consistentHash
                           properties:
+                            aggression:
+                              description: The aggression factor for traffic increase
+                                during slow start.
+                              type: string
                             consistentHash:
                               properties:
                                 httpCookie:
@@ -2829,6 +2889,10 @@ spec:
                                     type: string
                                   type: array
                               type: object
+                            minWeightPercent:
+                              description: The minimum percentage of traffic to send
+                                to new endpoints during slow start.
+                              type: integer
                             simple:
                               enum:
                               - UNSPECIFIED
