--- a/kubernetes/customresourcedefinitions.gen.yaml
+++ b/kubernetes/customresourcedefinitions.gen.yaml
@@ -457,6 +457,14 @@ spec:
                               - ROUND_ROBIN
                               - LEAST_REQUEST
                               type: string
+                            sqbAggression:
+                              description: The aggression factor for traffic increase
+                                during slow start.
+                              type: string
+                            sqbMinWeightPercent:
+                              description: The minimum percentage of traffic to send
+                                to new endpoints during slow start.
+                              type: integer
                             warmupDurationSecs:
                               description: Represents the warmup duration of Service.
                               type: string
@@ -756,6 +764,14 @@ spec:
                                     - ROUND_ROBIN
                                     - LEAST_REQUEST
                                     type: string
+                                  sqbAggression:
+                                    description: The aggression factor for traffic
+                                      increase during slow start.
+                                    type: string
+                                  sqbMinWeightPercent:
+                                    description: The minimum percentage of traffic
+                                      to send to new endpoints during slow start.
+                                    type: integer
                                   warmupDurationSecs:
                                     description: Represents the warmup duration of
                                       Service.
@@ -1136,6 +1152,14 @@ spec:
                         - ROUND_ROBIN
                         - LEAST_REQUEST
                         type: string
+                      sqbAggression:
+                        description: The aggression factor for traffic increase during
+                          slow start.
+                        type: string
+                      sqbMinWeightPercent:
+                        description: The minimum percentage of traffic to send to
+                          new endpoints during slow start.
+                        type: integer
                       warmupDurationSecs:
                         description: Represents the warmup duration of Service.
                         type: string
@@ -1429,6 +1453,14 @@ spec:
                               - ROUND_ROBIN
                               - LEAST_REQUEST
                               type: string
+                            sqbAggression:
+                              description: The aggression factor for traffic increase
+                                during slow start.
+                              type: string
+                            sqbMinWeightPercent:
+                              description: The minimum percentage of traffic to send
+                                to new endpoints during slow start.
+                              type: integer
                             warmupDurationSecs:
                               description: Represents the warmup duration of Service.
                               type: string
@@ -1866,6 +1898,14 @@ spec:
                               - ROUND_ROBIN
                               - LEAST_REQUEST
                               type: string
+                            sqbAggression:
+                              description: The aggression factor for traffic increase
+                                during slow start.
+                              type: string
+                            sqbMinWeightPercent:
+                              description: The minimum percentage of traffic to send
+                                to new endpoints during slow start.
+                              type: integer
                             warmupDurationSecs:
                               description: Represents the warmup duration of Service.
                               type: string
@@ -2165,6 +2205,14 @@ spec:
                                     - ROUND_ROBIN
                                     - LEAST_REQUEST
                                     type: string
+                                  sqbAggression:
+                                    description: The aggression factor for traffic
+                                      increase during slow start.
+                                    type: string
+                                  sqbMinWeightPercent:
+                                    description: The minimum percentage of traffic
+                                      to send to new endpoints during slow start.
+                                    type: integer
                                   warmupDurationSecs:
                                     description: Represents the warmup duration of
                                       Service.
@@ -2545,6 +2593,14 @@ spec:
                         - ROUND_ROBIN
                         - LEAST_REQUEST
                         type: string
+                      sqbAggression:
+                        description: The aggression factor for traffic increase during
+                          slow start.
+                        type: string
+                      sqbMinWeightPercent:
+                        description: The minimum percentage of traffic to send to
+                          new endpoints during slow start.
+                        type: integer
                       warmupDurationSecs:
                         description: Represents the warmup duration of Service.
                         type: string
@@ -2838,6 +2894,14 @@ spec:
                               - ROUND_ROBIN
                               - LEAST_REQUEST
                               type: string
+                            sqbAggression:
+                              description: The aggression factor for traffic increase
+                                during slow start.
+                              type: string
+                            sqbMinWeightPercent:
+                              description: The minimum percentage of traffic to send
+                                to new endpoints during slow start.
+                              type: integer
                             warmupDurationSecs:
                               description: Represents the warmup duration of Service.
                               type: string
