--- a/kubernetes/customresourcedefinitions.gen.yaml
+++ b/kubernetes/customresourcedefinitions.gen.yaml
@@ -359,10 +359,6 @@ spec:
                             required:
                             - consistentHash
                           properties:
-                            aggression:
-                              description: The aggression factor for traffic increase
-                                during slow start.
-                              type: string
                             consistentHash:
                               properties:
                                 httpCookie:
@@ -452,10 +448,6 @@ spec:
                                     type: string
                                   type: array
                               type: object
-                            minWeightPercent:
-                              description: The minimum percentage of traffic to send
-                                to new endpoints during slow start.
-                              type: integer
                             simple:
                               enum:
                               - UNSPECIFIED
@@ -465,6 +457,14 @@ spec:
                               - ROUND_ROBIN
                               - LEAST_REQUEST
                               type: string
+                            sqbAggression:
+                              description: The aggression factor for traffic increase
+                                during slow start.
+                              type: string
+                            sqbMinWeightPercent:
+                              description: The minimum percentage of traffic to send
+                                to new endpoints during slow start.
+                              type: integer
                             warmupDurationSecs:
                               description: Represents the warmup duration of Service.
                               type: string
@@ -663,10 +663,6 @@ spec:
                                   required:
                                   - consistentHash
                                 properties:
-                                  aggression:
-                                    description: The aggression factor for traffic
-                                      increase during slow start.
-                                    type: string
                                   consistentHash:
                                     properties:
                                       httpCookie:
@@ -759,10 +755,6 @@ spec:
                                           type: string
                                         type: array
                                     type: object
-                                  minWeightPercent:
-                                    description: The minimum percentage of traffic
-                                      to send to new endpoints during slow start.
-                                    type: integer
                                   simple:
                                     enum:
                                     - UNSPECIFIED
@@ -772,6 +764,14 @@ spec:
                                     - ROUND_ROBIN
                                     - LEAST_REQUEST
                                     type: string
+                                  sqbAggression:
+                                    description: The aggression factor for traffic
+                                      increase during slow start.
+                                    type: string
+                                  sqbMinWeightPercent:
+                                    description: The minimum percentage of traffic
+                                      to send to new endpoints during slow start.
+                                    type: integer
                                   warmupDurationSecs:
                                     description: Represents the warmup duration of
                                       Service.
@@ -1057,10 +1057,6 @@ spec:
                       required:
                       - consistentHash
                     properties:
-                      aggression:
-                        description: The aggression factor for traffic increase during
-                          slow start.
-                        type: string
                       consistentHash:
                         properties:
                           httpCookie:
@@ -1147,10 +1143,6 @@ spec:
                               type: string
                             type: array
                         type: object
-                      minWeightPercent:
-                        description: The minimum percentage of traffic to send to
-                          new endpoints during slow start.
-                        type: integer
                       simple:
                         enum:
                         - UNSPECIFIED
@@ -1160,6 +1152,14 @@ spec:
                         - ROUND_ROBIN
                         - LEAST_REQUEST
                         type: string
+                      sqbAggression:
+                        description: The aggression factor for traffic increase during
+                          slow start.
+                        type: string
+                      sqbMinWeightPercent:
+                        description: The minimum percentage of traffic to send to
+                          new endpoints during slow start.
+                        type: integer
                       warmupDurationSecs:
                         description: Represents the warmup duration of Service.
                         type: string
@@ -1355,10 +1355,6 @@ spec:
                             required:
                             - consistentHash
                           properties:
-                            aggression:
-                              description: The aggression factor for traffic increase
-                                during slow start.
-                              type: string
                             consistentHash:
                               properties:
                                 httpCookie:
@@ -1448,10 +1444,6 @@ spec:
                                     type: string
                                   type: array
                               type: object
-                            minWeightPercent:
-                              description: The minimum percentage of traffic to send
-                                to new endpoints during slow start.
-                              type: integer
                             simple:
                               enum:
                               - UNSPECIFIED
@@ -1461,6 +1453,14 @@ spec:
                               - ROUND_ROBIN
                               - LEAST_REQUEST
                               type: string
+                            sqbAggression:
+                              description: The aggression factor for traffic increase
+                                during slow start.
+                              type: string
+                            sqbMinWeightPercent:
+                              description: The minimum percentage of traffic to send
+                                to new endpoints during slow start.
+                              type: integer
                             warmupDurationSecs:
                               description: Represents the warmup duration of Service.
                               type: string
@@ -1800,10 +1800,6 @@ spec:
                             required:
                             - consistentHash
                           properties:
-                            aggression:
-                              description: The aggression factor for traffic increase
-                                during slow start.
-                              type: string
                             consistentHash:
                               properties:
                                 httpCookie:
@@ -1893,10 +1889,6 @@ spec:
                                     type: string
                                   type: array
                               type: object
-                            minWeightPercent:
-                              description: The minimum percentage of traffic to send
-                                to new endpoints during slow start.
-                              type: integer
                             simple:
                               enum:
                               - UNSPECIFIED
@@ -1906,6 +1898,14 @@ spec:
                               - ROUND_ROBIN
                               - LEAST_REQUEST
                               type: string
+                            sqbAggression:
+                              description: The aggression factor for traffic increase
+                                during slow start.
+                              type: string
+                            sqbMinWeightPercent:
+                              description: The minimum percentage of traffic to send
+                                to new endpoints during slow start.
+                              type: integer
                             warmupDurationSecs:
                               description: Represents the warmup duration of Service.
                               type: string
@@ -2104,10 +2104,6 @@ spec:
                                   required:
                                   - consistentHash
                                 properties:
-                                  aggression:
-                                    description: The aggression factor for traffic
-                                      increase during slow start.
-                                    type: string
                                   consistentHash:
                                     properties:
                                       httpCookie:
@@ -2200,10 +2196,6 @@ spec:
                                           type: string
                                         type: array
                                     type: object
-                                  minWeightPercent:
-                                    description: The minimum percentage of traffic
-                                      to send to new endpoints during slow start.
-                                    type: integer
                                   simple:
                                     enum:
                                     - UNSPECIFIED
@@ -2213,6 +2205,14 @@ spec:
                                     - ROUND_ROBIN
                                     - LEAST_REQUEST
                                     type: string
+                                  sqbAggression:
+                                    description: The aggression factor for traffic
+                                      increase during slow start.
+                                    type: string
+                                  sqbMinWeightPercent:
+                                    description: The minimum percentage of traffic
+                                      to send to new endpoints during slow start.
+                                    type: integer
                                   warmupDurationSecs:
                                     description: Represents the warmup duration of
                                       Service.
@@ -2498,10 +2498,6 @@ spec:
                       required:
                       - consistentHash
                     properties:
-                      aggression:
-                        description: The aggression factor for traffic increase during
-                          slow start.
-                        type: string
                       consistentHash:
                         properties:
                           httpCookie:
@@ -2588,10 +2584,6 @@ spec:
                               type: string
                             type: array
                         type: object
-                      minWeightPercent:
-                        description: The minimum percentage of traffic to send to
-                          new endpoints during slow start.
-                        type: integer
                       simple:
                         enum:
                         - UNSPECIFIED
@@ -2601,6 +2593,14 @@ spec:
                         - ROUND_ROBIN
                         - LEAST_REQUEST
                         type: string
+                      sqbAggression:
+                        description: The aggression factor for traffic increase during
+                          slow start.
+                        type: string
+                      sqbMinWeightPercent:
+                        description: The minimum percentage of traffic to send to
+                          new endpoints during slow start.
+                        type: integer
                       warmupDurationSecs:
                         description: Represents the warmup duration of Service.
                         type: string
@@ -2796,10 +2796,6 @@ spec:
                             required:
                             - consistentHash
                           properties:
-                            aggression:
-                              description: The aggression factor for traffic increase
-                                during slow start.
-                              type: string
                             consistentHash:
                               properties:
                                 httpCookie:
@@ -2889,10 +2885,6 @@ spec:
                                     type: string
                                   type: array
                               type: object
-                            minWeightPercent:
-                              description: The minimum percentage of traffic to send
-                                to new endpoints during slow start.
-                              type: integer
                             simple:
                               enum:
                               - UNSPECIFIED
@@ -2902,6 +2894,14 @@ spec:
                               - ROUND_ROBIN
                               - LEAST_REQUEST
                               type: string
+                            sqbAggression:
+                              description: The aggression factor for traffic increase
+                                during slow start.
+                              type: string
+                            sqbMinWeightPercent:
+                              description: The minimum percentage of traffic to send
+                                to new endpoints during slow start.
+                              type: integer
                             warmupDurationSecs:
                               description: Represents the warmup duration of Service.
                               type: string
